Bug 288714 - 16 and 32 bits float : Layer "lock" when moving exposure
Summary: 16 and 32 bits float : Layer "lock" when moving exposure
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks: 292678
  Show dependency treegraph
 
Reported: 2011-12-11 12:42 UTC by animtim
Modified: 2013-09-25 15:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2011-12-11 12:42:51 UTC
Version:           svn trunk (using KDE 4.5.5) 
OS:                Linux

If I move exposure slider on a 16/32 bits float file, the current layer/canvas becomes like "locked" and can't be edited, until I switch to another layer.

Reproducible: Always

Steps to Reproduce:
-Open an exr file (good sample files here : http://www.openexr.com/downloads.html )
-move exposition slider
-try to edit the layer

Actual Results:  
can't edit/paint
So create another layer and switch to it 
(Also exposure is reset -on canvas but not on slider- after creating a new layer, that shouldn't happen)

Expected Results:  
Layer should be editable after exposure immediately after exposure change.
Comment 1 Halla Rempt 2011-12-18 13:36:01 UTC
Ack
Comment 2 Halla Rempt 2012-06-03 09:42:20 UTC
Actually, does the whole exposure slider still work?
Comment 3 animtim 2012-06-03 11:18:10 UTC
Just tested it with a fresh master build, it works fine apparently, I still can reproduce exactly this bug.
(Tested opening GoldenGate.exr from the openexr demo files. Playing with exposure level from the Overview Docker works as expected, except for the bug described here)
Comment 4 Halla Rempt 2012-08-28 14:23:32 UTC
This is still the case, even though the whole exposure slider mechanism has moved around.
Comment 5 Halla Rempt 2013-09-25 15:42:58 UTC
Git commit e99e0a80c8c28daa527a5097180b7f808a4f14df by Boudewijn Rempt.
Committed on 25/09/2013 at 15:43.
Pushed by rempt into branch 'master'.

Fix layer lock after exposure change

This bug was around since at least 2008, probably earlier!

M  +3    -0    krita/ui/tool/kis_tool.cc

http://commits.kde.org/calligra/e99e0a80c8c28daa527a5097180b7f808a4f14df
Comment 6 Halla Rempt 2013-09-25 15:43:32 UTC
Git commit 02070ebb5b0f96257f63434f57562972d6d18ebe by Boudewijn Rempt.
Committed on 25/09/2013 at 15:43.
Pushed by rempt into branch 'calligra/2.7'.

Fix layer lock after exposure change

This bug was around since at least 2008, probably earlier!

M  +3    -0    krita/ui/tool/kis_tool.cc

http://commits.kde.org/calligra/02070ebb5b0f96257f63434f57562972d6d18ebe