Fix layer lock after exposure change

BUG:288714

This bug was around since at least 2008, probably earlier!